--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,17 @@
-fruits list:
-apple
-Hello world
-orange
-pomelo
+<!DOCTYPE html>
+<html> 
+    <head>
+        <meta charset="utf-8">
+        <title> Yohana Yemane First Webpage </title>
+    </head>
 
-Lorem ipsum generator: https://www.lipsum.com/
+    <body>
+        <h1> Yohana Yemane Lab 1</h1>
+        <img src="/Users/yohanayemane/Documents/GitHub/INST377-FA2020/public/lab_1/baby.png" alt="Adorable Baby" width="20" height ="2">
+    <ul>
+        <li>Baby</li>
+        <li>Cute</li>
+        <li>Lovely</li>
+    </ul>
+    </body>
+</html>
