--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1> Yohana Yemane Lab 1</h1>
-        <img src="/Users/yohanayemane/Documents/GitHub/INST377-FA2020/public/lab_1/baby.png" alt="Adorable Baby" width="20" height ="2">
+        <img src="baby1.png" alt="Adorable Baby" style="width:20px;height:20px;">
     <ul>
         <li>Baby</li>
         <li>Cute</li>
