--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1> Yohana Yemane Lab 1</h1>
-        <img src="baby1.png" alt="Adorable Baby" style="width:20px;height:20px;">
+        <img src="animal.png" alt="Adorable Baby">
     <ul>
         <li>Baby</li>
         <li>Cute</li>
