--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en"> 
     <head>
         <meta charset="utf-8">
         <title> Yohana Yemane First Webpage </title>
@@ -7,7 +7,7 @@
 
     <body>
         <h1> Yohana Yemane Lab 1</h1>
-        <img src="animal.png" alt="Adorable Baby">
+        <img src="animal.png" alt="Adorable Animal">
     <ul>
         <li>Baby</li>
         <li>Cute</li>
