--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
     <meta charset="utf-8">
     <title>Birdwatching</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link href = 'style.css' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
   </head>
 
   <body>
-
-      <h1>Birdwatching</h1>
+  <div class = 'header' id=1 element = something>
+      <h1>Yohana Yemane's Lab 3</h1>
+      <header>
       <img src="dove.png" alt="a simple dove logo">
-
-
+      </header>
+<nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -23,25 +27,30 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
+    </nav>
+  </div>
 
-
+<div class="main">
       <h2>Welcome</h2>
+      <div class = 'article'>
+      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      </div>
 
-      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
-
-      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
-
+      <div class = 'aside'>
       <h2>Favourite photos</h2>
 
-      <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-      <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-      <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-      <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+      <a href="baby1.jpg"><img src="baby1.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
+      <a href="baby2.jpg"><img src="baby2.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
+      <a href="baby3.jpg"><img src="baby3.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
+      <a href="baby4.jpg"><img src="baby4.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
 
+<div class ='footer'>
+      <p>This website example has been written by Yohana Yemane, 2020</p>
+</div>
 
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
-
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-
+      
+    </header>
+  </div>
   </body>
 </html>
