--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Birdwatching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap" rel="stylesheet">
     <link href = "style.css" rel = "stylesheet">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
