--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class = "header" id=1 element = something>
-      <h1>Yohana Yemane's Lab 3</h1>
+      <h1> Yohana Yemane's Lab 3 </h1>
       
       <header>
       <img src="dove.png" alt="a simple dove logo">
@@ -43,10 +43,10 @@
     <div class = "aside">
       <h2>Favourite photos</h2>
 
-      <a href="baby1.jpg"><img src="baby1.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-      <a href="baby2.jpg"><img src="baby2.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-      <a href="baby3.jpg"><img src="baby3.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-      <a href="baby4.jpg"><img src="baby4.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+      <a href="pic1.jpg"><img src="pic1.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
+      <a href="pic2.jpg"><img src="pic2.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
+      <a href="pic3.jpg"><img src="baby3.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
+      <a href="pic4.jpg"><img src="pic4.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
 
       <div class="footer">
       <p>This website example has been written by Yohana Yemane, 2020</p>
