--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -1,1 +1,20 @@
-Start here!
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title> Yohana Yemane </title>
+        <link href = "styles.css" rel = "stylesheet">
+        <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+
+    <body>
+        <header>
+            <div class = "felx-outer">
+                <h1>Estifanos and Yohana</h1>
+                <img src="testudo.png" alt="UMD Logo">
+            </div>
+        </header>
+    </body>
+</html>
