--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -11,9 +11,21 @@
 
     <body>
         <header>
-            <div class = "felx-outer">
+            <div class="header" >
                 <h1>Estifanos and Yohana</h1>
-                <img src="testudo.png" alt="UMD Logo">
+                
+            </div>
+
+            <div class = "header">
+            <img src="testudo.png" alt="UMD Logo">
+            </div>
+
+            <div class="wrapper">
+                <p>The w3-container class is an important w3.CSS class.</p>
+              </div>
+
+            <div class= "container">
+                <p>Hi</p>
             </div>
         </header>
     </body>
