--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -28,5 +28,26 @@
                 <p>Hi</p>
             </div>
         </header>
+    <div class = body>
+        <div>
+            <img src="leopard.jpg" alt="Animal">
+            <p>I am the fastest animal</p>
+        </div>
+
+        <div>
+            <h2>Characteristics</h2>
+                <ol>
+                    <li>Habits</li>
+                </ol>
+                <p> They are also nocturnal and spend their nights hunting instead of sleeping.</p>
+
+                <ul>
+                    <li> Solitary creatures </li>
+                    <li> Nocturnal </li>
+                    <li> Night time hunters </li>
+                </ul>
+        </div>
+    </div>
+        
     </body>
 </html>
