--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -39,7 +39,7 @@
         <div class= body>
             <h2>Characteristics</h2>
                 <ol>
-                    <li>Habits
+                    <li><h3>Habits</h3>
                         <p> They are also nocturnal and spend their nights hunting instead of sleeping.
                             <ul>
                                 <li> Solitary creatures </li>
@@ -48,7 +48,7 @@
                             </ul>
                         </p>
                     </li>
-                    <li>Habits
+                    <li><h3>Size</h3>
                         <p> Leopards are larger than a house cat, but leopards are the smallest members of the large cat category.
                             <ul>
                                 <li>92 to 190 centimeters long </li>
@@ -57,7 +57,7 @@
                             </ul>
                         </p>
                     </li>
-                    <li>Habits
+                    <li><h3>Habitat</h3>
                         <p> The leopard is very adaptable and can live in many different places across the globe
                             <ul>
                                 <li> Sub-Saharan Africa </li>
