--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -21,6 +21,7 @@
 
             <div>
                 <img src="leopard.jpg" alt="Animal">
+                <p>The fastest animal</p>
             </div>
 
             <div class="wrapper">
@@ -31,12 +32,12 @@
         
     <div class = body>
 
-        <div class= column>
+        <div class= name>
             <h2>Characteristics</h2>
                 <ol>
                     <li><h2>Habits</h2>
                         <p> They are also nocturnal and spend their nights hunting instead of sleeping.
-                            <ul>
+                            <ul class="list">
                                 <li> Solitary creatures </li>
                                 <li> Nocturnal </li>
                                 <li> Night time hunters </li>
