--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -19,7 +19,7 @@
             </div>
         </header>
 
-            <div>
+            <div class=one>
                 <img src="leopard.jpg" alt="Animal">
                 <p>The fastest animal</p>
             </div>
@@ -32,7 +32,7 @@
         
     <div class = body>
 
-        <div class= name>
+        <div class= two>
             <h2>Characteristics</h2>
                 <ol>
                     <li><h2>Habits</h2>
