--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -38,7 +38,7 @@
             <textarea rows="5" cols="33" name="message" id="message" placeholder="Enter your message here"></textarea>
           </li>
           <li>
-            <p>Fruits</p>
+            <p class= "checkbox-list-label">Age </p>
             <ul class="flex-inner">
                 <li>
                     <input type="checkbox" name = "age" id="eighteen-to-thirtyfive">
