--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -10,4 +10,41 @@
     - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
 -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name='author' content='Yohana Yemane'>
+    <title>Yohana Yemane Lab 7</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
+  <body>
+    <div class="wrapper">
+      <div class="container flex-outer">
+        <div class="header">
+          <h1>Yohana Yemane's Lab 7</h1>
+        </div>
+        <div id = "chartContainer"></div>
+        <div class = "canvasjs-chart-container"></div>
+        <canvas class = "canvas-chart-canvas"> </canvas>
+        <div class = "canvasjs-chart-toolbar"></div>
+       
+        <form>
+          <button
+            type="submit"
+            class="submitButton"
+            name="submitButton"
+          >WHERE SHOULD WE EAT</button>
+        </form>
+      </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="canvasjs.min.js"></script>
+  </body>
+</html>
